proyecto_etapa3/antlr/CoolParser.py
# Generated from c:\Users\A01339250\Documents\Programacion\proyecto-compiladores-2021\proyecto_etapa3\antlr\Cool.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CoolParser ( Parser ):

    grammarFileName = "Cool.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'inherits'", "'{'", "'}'", "'('", 
                     "','", "')'", "':'", "'<-'", "'=>'", "'.'", "'@'", 
                     "'\u00CB\u0153'", "'*'", "'/'", "'+'", "'-'", "'<'", 
                     "'<='", "'='", "'not'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "KLASS", "FI", "IF", "IN", 
                      "INHERITS", "ISVOID", "LET", "LOOP", "POOL", "THEN", 
                      "ELSE", "WHILE", "CASE", "ESAC", "NEW", "OF", "NOT", 
                      "TRUE", "FALSE", "TYPE", "ID", "INTEGER", "STRING", 
                      "COMMENT", "LINE_COMENT", "WS" ]

    RULE_program = 0
    RULE_klass = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_expr = 4
    RULE_primary = 5

    ruleNames =  [ "program", "klass", "feature", "formal", "expr", "primary" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    KLASS=22
    FI=23
    IF=24
    IN=25
    INHERITS=26
    ISVOID=27
    LET=28
    LOOP=29
    POOL=30
    THEN=31
    ELSE=32
    WHILE=33
    CASE=34
    ESAC=35
    NEW=36
    OF=37
    NOT=38
    TRUE=39
    FALSE=40
    TYPE=41
    ID=42
    INTEGER=43
    STRING=44
    COMMENT=45
    LINE_COMENT=46
    WS=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def klass(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.KlassContext)
            else:
                return self.getTypedRuleContext(CoolParser.KlassContext,i)


        def getRuleIndex(self):
            return CoolParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CoolParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CoolParser.KLASS:
                self.state = 12
                self.klass()
                self.state = 13
                self.match(CoolParser.T__0)
                self.state = 19
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KlassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KLASS(self):
            return self.getToken(CoolParser.KLASS, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.TYPE)
            else:
                return self.getToken(CoolParser.TYPE, i)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.FeatureContext)
            else:
                return self.getTypedRuleContext(CoolParser.FeatureContext,i)


        def getRuleIndex(self):
            return CoolParser.RULE_klass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKlass" ):
                listener.enterKlass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKlass" ):
                listener.exitKlass(self)




    def klass(self):

        localctx = CoolParser.KlassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_klass)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.match(CoolParser.KLASS)
            self.state = 21
            self.match(CoolParser.TYPE)
            self.state = 24
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CoolParser.T__1:
                self.state = 22
                self.match(CoolParser.T__1)
                self.state = 23
                self.match(CoolParser.TYPE)


            self.state = 26
            self.match(CoolParser.T__2)
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CoolParser.ID:
                self.state = 27
                self.feature()
                self.state = 28
                self.match(CoolParser.T__0)
                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 35
            self.match(CoolParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CoolParser.RULE_feature

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MethodContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(CoolParser.ID, 0)
        def TYPE(self):
            return self.getToken(CoolParser.TYPE, 0)
        def expr(self):
            return self.getTypedRuleContext(CoolParser.ExprContext,0)

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.FormalContext)
            else:
                return self.getTypedRuleContext(CoolParser.FormalContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)


    class AtributeContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(CoolParser.ID, 0)
        def TYPE(self):
            return self.getToken(CoolParser.TYPE, 0)
        def expr(self):
            return self.getTypedRuleContext(CoolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribute" ):
                listener.enterAtribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribute" ):
                listener.exitAtribute(self)



    def feature(self):

        localctx = CoolParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = CoolParser.MethodContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.match(CoolParser.ID)
                self.state = 38
                self.match(CoolParser.T__4)
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CoolParser.ID:
                    self.state = 39
                    self.formal()
                    self.state = 44
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==CoolParser.T__5:
                        self.state = 40
                        self.match(CoolParser.T__5)
                        self.state = 41
                        self.formal()
                        self.state = 46
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 49
                self.match(CoolParser.T__6)
                self.state = 50
                self.match(CoolParser.T__7)
                self.state = 51
                self.match(CoolParser.TYPE)
                self.state = 52
                self.match(CoolParser.T__2)
                self.state = 53
                self.expr(0)
                self.state = 54
                self.match(CoolParser.T__3)
                pass

            elif la_ == 2:
                localctx = CoolParser.AtributeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.match(CoolParser.ID)
                self.state = 57
                self.match(CoolParser.T__7)
                self.state = 58
                self.match(CoolParser.TYPE)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CoolParser.T__8:
                    self.state = 59
                    self.match(CoolParser.T__8)
                    self.state = 60
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CoolParser.ID, 0)

        def TYPE(self):
            return self.getToken(CoolParser.TYPE, 0)

        def getRuleIndex(self):
            return CoolParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)




    def formal(self):

        localctx = CoolParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(CoolParser.ID)
            self.state = 66
            self.match(CoolParser.T__7)
            self.state = 67
            self.match(CoolParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CoolParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AddContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)


    class NewContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEW(self):
            return self.getToken(CoolParser.NEW, 0)
        def TYPE(self):
            return self.getToken(CoolParser.TYPE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNew" ):
                listener.enterNew(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNew" ):
                listener.exitNew(self)


    class SubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSub" ):
                listener.enterSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSub" ):
                listener.exitSub(self)


    class MultContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMult" ):
                listener.enterMult(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMult" ):
                listener.exitMult(self)


    class IsvoidContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISVOID(self):
            return self.getToken(CoolParser.ISVOID, 0)
        def expr(self):
            return self.getTypedRuleContext(CoolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIsvoid" ):
                listener.enterIsvoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIsvoid" ):
                listener.exitIsvoid(self)


    class LtContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLt" ):
                listener.enterLt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLt" ):
                listener.exitLt(self)


    class WhileContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(CoolParser.WHILE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)

        def LOOP(self):
            return self.getToken(CoolParser.LOOP, 0)
        def POOL(self):
            return self.getToken(CoolParser.POOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)


    class EqContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEq" ):
                listener.enterEq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEq" ):
                listener.exitEq(self)


    class CallContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(CoolParser.ID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall" ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall" ):
                listener.exitCall(self)


    class DivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiv" ):
                listener.enterDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiv" ):
                listener.exitDiv(self)


    class NegContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(CoolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNeg" ):
                listener.enterNeg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNeg" ):
                listener.exitNeg(self)


    class NotContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(CoolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot" ):
                listener.enterNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot" ):
                listener.exitNot(self)


    class AtContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)

        def ID(self):
            return self.getToken(CoolParser.ID, 0)
        def TYPE(self):
            return self.getToken(CoolParser.TYPE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAt" ):
                listener.enterAt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAt" ):
                listener.exitAt(self)


    class LeContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLe" ):
                listener.enterLe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLe" ):
                listener.exitLe(self)


    class LetContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(CoolParser.LET, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.ID)
            else:
                return self.getToken(CoolParser.ID, i)
        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.TYPE)
            else:
                return self.getToken(CoolParser.TYPE, i)
        def IN(self):
            return self.getToken(CoolParser.IN, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLet" ):
                listener.enterLet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLet" ):
                listener.exitLet(self)


    class BlockContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)


    class IfContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(CoolParser.IF, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)

        def THEN(self):
            return self.getToken(CoolParser.THEN, 0)
        def ELSE(self):
            return self.getToken(CoolParser.ELSE, 0)
        def FI(self):
            return self.getToken(CoolParser.FI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)


    class CaseContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CASE(self):
            return self.getToken(CoolParser.CASE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CoolParser.ExprContext)
            else:
                return self.getTypedRuleContext(CoolParser.ExprContext,i)

        def OF(self):
            return self.getToken(CoolParser.OF, 0)
        def ESAC(self):
            return self.getToken(CoolParser.ESAC, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.ID)
            else:
                return self.getToken(CoolParser.ID, i)
        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(CoolParser.TYPE)
            else:
                return self.getToken(CoolParser.TYPE, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCase" ):
                listener.enterCase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCase" ):
                listener.exitCase(self)


    class BaseContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def primary(self):
            return self.getTypedRuleContext(CoolParser.PrimaryContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBase" ):
                listener.enterBase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBase" ):
                listener.exitBase(self)


    class AssignContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CoolParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(CoolParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(CoolParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CoolParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                localctx = CoolParser.BaseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 70
                self.primary()
                pass

            elif la_ == 2:
                localctx = CoolParser.CallContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 71
                self.match(CoolParser.ID)
                self.state = 72
                self.match(CoolParser.T__4)
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CoolParser.T__2) | (1 << CoolParser.T__4) | (1 << CoolParser.T__12) | (1 << CoolParser.T__20) | (1 << CoolParser.IF) | (1 << CoolParser.ISVOID) | (1 << CoolParser.LET) | (1 << CoolParser.WHILE) | (1 << CoolParser.CASE) | (1 << CoolParser.NEW) | (1 << CoolParser.TRUE) | (1 << CoolParser.FALSE) | (1 << CoolParser.ID) | (1 << CoolParser.INTEGER) | (1 << CoolParser.STRING))) != 0):
                    self.state = 73
                    self.expr(0)
                    self.state = 78
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==CoolParser.T__5:
                        self.state = 74
                        self.match(CoolParser.T__5)
                        self.state = 75
                        self.expr(0)
                        self.state = 80
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 83
                self.match(CoolParser.T__6)
                pass

            elif la_ == 3:
                localctx = CoolParser.IfContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 84
                self.match(CoolParser.IF)
                self.state = 85
                self.expr(0)
                self.state = 86
                self.match(CoolParser.THEN)
                self.state = 87
                self.expr(0)
                self.state = 88
                self.match(CoolParser.ELSE)
                self.state = 89
                self.expr(0)
                self.state = 90
                self.match(CoolParser.FI)
                pass

            elif la_ == 4:
                localctx = CoolParser.WhileContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 92
                self.match(CoolParser.WHILE)
                self.state = 93
                self.expr(0)
                self.state = 94
                self.match(CoolParser.LOOP)
                self.state = 95
                self.expr(0)
                self.state = 96
                self.match(CoolParser.POOL)
                pass

            elif la_ == 5:
                localctx = CoolParser.LetContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 98
                self.match(CoolParser.LET)
                self.state = 99
                self.match(CoolParser.ID)
                self.state = 100
                self.match(CoolParser.T__7)
                self.state = 101
                self.match(CoolParser.TYPE)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==CoolParser.T__8:
                    self.state = 102
                    self.match(CoolParser.T__8)
                    self.state = 103
                    self.expr(0)


                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CoolParser.T__5:
                    self.state = 106
                    self.match(CoolParser.T__5)
                    self.state = 107
                    self.match(CoolParser.ID)
                    self.state = 108
                    self.match(CoolParser.T__7)
                    self.state = 109
                    self.match(CoolParser.TYPE)
                    self.state = 112
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==CoolParser.T__8:
                        self.state = 110
                        self.match(CoolParser.T__8)
                        self.state = 111
                        self.expr(0)


                    self.state = 118
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 119
                self.match(CoolParser.IN)
                self.state = 120
                self.expr(17)
                pass

            elif la_ == 6:
                localctx = CoolParser.CaseContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 121
                self.match(CoolParser.CASE)
                self.state = 122
                self.expr(0)
                self.state = 123
                self.match(CoolParser.OF)
                self.state = 131 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 124
                    self.match(CoolParser.ID)
                    self.state = 125
                    self.match(CoolParser.T__7)
                    self.state = 126
                    self.match(CoolParser.TYPE)
                    self.state = 127
                    self.match(CoolParser.T__9)
                    self.state = 128
                    self.expr(0)
                    self.state = 129
                    self.match(CoolParser.T__0)
                    self.state = 133 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==CoolParser.ID):
                        break

                self.state = 135
                self.match(CoolParser.ESAC)
                pass

            elif la_ == 7:
                localctx = CoolParser.NewContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 137
                self.match(CoolParser.NEW)
                self.state = 138
                self.match(CoolParser.TYPE)
                pass
